@@ -1,4 +1,5 @@
-New entries should be added at the top
+2005-11-15 New entries should be added at the top 2005-08-14 Applied
+           Jouni K Steppanen's boxplot patch SF patch#1349997 - JDH
 
 2005-11-08 Added Nicolas' irregularly spaced image patch
 
